overflow fix

--- a/style.css
+++ b/style.css
@@ -315,6 +315,7 @@ body, html {
     height: 100%;
     width: 100%;
     margin: 0px;
+    overflow-x: hidden;
   }
 
 body {
